--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Kuba Andrýsek
 
-#url: "https://kubaandrysek.cz" # the base hostname & protocol for your site, e.g. https://example.github.io
+#url: "/" # the base hostname & protocol for your site, e.g. https://example.github.io
 #url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
@@ -110,7 +110,7 @@ formspree_form_id: xpzorajw
 # syntax highlighter
 markdown: kramdown
 highlighter: rouge
-permalink: pretty
+#permalink: pretty
 
 # google analytics
 google_analytics: UA-149505692-2
