--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,7 @@ twitter_username: Jakubandrysek1
 # telegram_username: johndoe
 # dribbble_username: johndoe
 # flickr_username: johndoe
+scholar_username: UBOvUgkAAAAJ
 
 
 #for comments using disqus
