--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Kuba Andrýsek
 
-#url: "/" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://kubaandrysek.cz"
 #url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
