Fix typo, add sponsoring

--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ projects:
 
 # social links
 github_username:  JakubAndrysek
+github_username_sponsor:  JakubAndrysek
 linkedin_username: jakub-andrysek
 twitter_username: Jakubandrysek1
 # facebook_username: johndoe
