--- a/_config.yml
+++ b/_config.yml
@@ -134,13 +134,12 @@ paginate_path: "/blog/page/:num/"
 
 permalink: /:year/:month/:day/:title
 
-# minify
-# compress_html:
-#   clippings: all
-#   comments: ["<!-- ", " -->"]
-#   endings: all
-#   ignore:
-#     envs: ['development']
+
+picture:
+  relative_url: true
+#  source: "assets"
+#  output: "assets"
+#  suppress_warnings: true
 
 # Archives
 # jekyll-archives:
