Add photo, about me, fix typo

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author_website_url: "https://kubaandrysek.cz"
 
 # image 100x100px
 author_work_experiences:
-  - designation: Prezentace SOČ na mezinárosní konferenci v Lucembursku
+  - designation: Prezentace SOČ na mezinárodní konferenci v Lucembursku
     date: říjen 2022
     description: Konference Expo-Sciences Luxembourg 2022
     company_logo: work_experiences/lucembursko.jpg
