--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
     - text: Projects
-      url: /projects/
+      url: /projects
     - text: Blog
-      url: /blog/
+      url: /blog
     - text: Equipment
-      url: /equipment/
+      url: /equipment
     - text: Contact
-      url : /contact/
+      url : /contact
 
 author: Kuba Andrýsek
 author_email: "email@kubaandrysek.cz"
